# full-text-search-with-django

./: README.md  compose.yaml  pyproject.toml
config/: settings.py  urls.py
full_text_search/: helpers.py
full_text_search/mappings/: base.py
full_text_search/utils/: opensearch_client.py
myapp/: apps.py  models.py  usecases.py  views.py
myapp/mappings/: article.py
myapp/migrations/: 0001_initial.py
myapp/templates/myapp/: article_detail.html  base.html  home.html  search_result.html
myapp/tests/factories/: __init__.py  article_factory.py  user_factory.py
scripts/: seed_data.py
