[project]
name = "full-text-search-with-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-ninja>=1.3.0",
    "django>=5.1.4",
    "opensearch-py>=2.8.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.1",
    "ruff>=0.9.1",
    "tqdm>=4.67.1",
]
